--- a/Sicherheitskopie/abstract.tex
+++ b/Sicherheitskopie/abstract.tex
@@ -1,2 +1,14 @@
 \chapter*{Übersicht}
-\blindtext[4]
+\begin{itemize}
+	\item in dieser Arbeit wird eine Leistungsuntersuchung an elektrisch, propellergetriebene Fluggeräte, dies umfasst Multicopter und Flächenflugzeuge, durchgeführt. 
+	\item das ziel ist es eine höhe von \SI{10}{km} bis \SI{15}{km} zu erreichen. 
+	\item Der Hintergrund ist die Substitution von Wetterballonen im Einsatz für die Atmosphärenforschung. 
+	\item Diese besitzen viele nachteile, die ein elektrisch, propellergetriebene Fluggeräte nicht besitzt wie die Zerstörung bei jedem Einsatz, die Umweltbelastung und ähnlich
+	\item nachdem ein kurzer Standpunkt der Technik dargelegt wird 
+	\item folgt die beschreibung des für die Untersuchung grundlegenden Programms
+	\item Überprüfung erfolgt mit dem Abgleich der Flugleistungen eines realen Steigflugs auf \SI{12600}{m} und dem im Programm nachgestellten.
+	\item Dabei reproduziert das Programm die Flugleistungen akkurat. Es gibt allerdings auch gewisse Abweichungen bzgl. der Motorregler
+	\item nachdem festgestellt wurde, dass das Programm im Rahmen der Modell genau arbeitet werden parameter untersucht
+	\item dabei wird zuerst geklärt, welche Art von Flächenflugzeug sich als effizienter erweist
+	\item dies ist der multicopter
+\end{itemize}
