--- a/Sicherheitskopie/preamble.tex
+++ b/Sicherheitskopie/preamble.tex
@@ -68,7 +68,7 @@
 %    eprint=false,
 %    bibencoding=utf8,safeinputenc=true
 %]{biblatex}
-\addbibresource{dummy_bibliography.bib}
+\addbibresource{Literatur.bib}
 % ******************************************************************************
 %
 % Textsatz
